tests/baselines/reference/classExtendsItself.errors.txt
==== tests/cases/compiler/classExtendsItself.ts (3 errors) ====
    class C extends C { } // error
          ~
!!! classExtendsItself.ts(1,7): error TS2100: Type 'C' recursively references itself as a base type.
    
    class D<T> extends D<T> { } // error
          ~
!!! classExtendsItself.ts(3,7): error TS2100: Type 'D<T>' recursively references itself as a base type.
    
    class E<T> extends E<string> { } // error
          ~
!!! classExtendsItself.ts(5,7): error TS2100: Type 'E<T>' recursively references itself as a base type.